--- a/package.json
+++ b/package.json
@@ -27,23 +27,37 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@babel/runtime": "^7.12.13",
+    "@loadable/component": "^5.14.1",
+    "@loadable/server": "^5.14.2",
+    "@loadable/webpack-plugin": "^5.14.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
+    "dotenv": "^8.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
     "lodash": "^4.17.20",
     "mobx": "^6.1.5",
     "mobx-react": "^7.1.0",
     "mobx-react-devtools": "^6.1.1",
+    "moment": "^2.29.1",
+    "morgan": "^1.10.0",
+    "next": "^10.0.9",
+    "node-iframe": "^1.5.10",
     "path": "^0.12.7",
     "react": "^17.0.1",
-    "react-dev-utils": "^11.0.2",
+    "react-crossfade-image": "^1.2.0",
+    "react-datepicker": "^3.8.0",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.2.0",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
