--- a/package.json
+++ b/package.json
@@ -10,61 +10,53 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@babel/cli": "^7.12.13",
-    "@babel/core": "^7.12.13",
-    "@babel/plugin-proposal-async-generator-functions": "^7.12.13",
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
-    "@babel/plugin-proposal-decorators": "^7.12.13",
-    "@babel/plugin-proposal-json-strings": "^7.12.13",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.13",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-proposal-async-generator-functions": "^7.14.2",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.14.2",
+    "@babel/plugin-proposal-json-strings": "^7.14.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.2",
     "@babel/plugin-syntax-async-generators": "^7.8.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/plugin-transform-arrow-functions": "^7.12.13",
-    "@babel/plugin-transform-async-to-generator": "^7.12.13",
-    "@babel/plugin-transform-react-constant-elements": "^7.12.13",
-    "@babel/plugin-transform-runtime": "^7.12.15",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/runtime": "^7.12.13",
-    "@loadable/component": "^5.14.1",
-    "@loadable/server": "^5.14.2",
-    "@loadable/webpack-plugin": "^5.14.2",
-    "@material-ui/core": "^4.11.3",
+    "@babel/plugin-transform-arrow-functions": "^7.13.0",
+    "@babel/plugin-transform-async-to-generator": "^7.13.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.13.13",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/runtime": "^7.14.0",
+    "@googleapis/docs": "^0.2.0",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.2",
-    "dotenv": "^8.2.0",
+    "css-loader": "^5.2.6",
+    "dotenv": "^8.6.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0",
-    "lodash": "^4.17.20",
-    "mobx": "^6.1.5",
-    "mobx-react": "^7.1.0",
+    "html-webpack-plugin": "^5.3.1",
+    "lodash": "^4.17.21",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "mobx-react-devtools": "^6.1.1",
     "moment": "^2.29.1",
-    "morgan": "^1.10.0",
-    "next": "^10.0.9",
-    "node-iframe": "^1.5.10",
     "path": "^0.12.7",
-    "react": "^17.0.1",
-    "react-crossfade-image": "^1.2.0",
+    "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dev-utils": "^11.0.4",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hot-loader": "^4.13.0",
-    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.2.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.7.3"
